# srl-explorer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: adding-a-tool.md
docs/assorted_prompts/: 0_BOOTSTRAP.md  1_LOGGING.md  2_REASONING.md  3_DOCS.md  4_BUG_FIXES.md  5_READABILITY.md
src/srl_explorer/: agent.py  cli.py  config.py  prompts.py
src/srl_explorer/tools/: yang.py
tests/: test_agent.py
